[package]
name = "mqtt-analyzer"
description = "Help analyzing MQTT messages"
version = "0.2.0"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2018"
repository = "https://github.com/alepez/mqtt-analyzer"
keywords = ["mqtt"]
license = "MIT"

[dependencies]
base64 = "0.10.1"
clap = "2.33.0"
colored = "1.8"
hex = "0.3.1"
rumqtt = "0.31.0"
uuid = { version = "0.7", features = ["v4"] }
