[package]
name = "mqtt-analyzer"
description = "Help analyzing MQTT messages"
version = "0.3.1"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
edition = "2018"
repository = "https://github.com/alepez/mqtt-analyzer"
keywords = ["mqtt"]
license = "MIT"

[dependencies]
base64 = "0.10.1"
clap = "2.33.0"
colored = "1.8"
hex = "0.3.1"
rumqtt = "0.31.0"
tui = "0.5"
termion = "1.5"
failure = "0.1"
circular-queue = "0.2.2"
unicode-width = "^0.1"
mqtt311 = "^0.2"
uuid = { version = "0.7", features = ["v4"] }

